# block-smashies

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/config/: bars.json  resources.json
assets/fonts/: pixel7.fnt
dev_content/: BallDefault.aseprite  BallSized.aseprite  Bricks.aseprite  Planning.aseprite  UI001.aseprite  ball.aseprite  ball2.aseprite  brick-color-list.txt  draft-gameplay-bg.aseprite  game_assets.json  gameplay-ui-elements.aseprite  gameplay-ui-radar-fade.aseprite  gameplay-ui.aseprite  greenbrick.aseprite  lg-nanite-atlas.aseprite  nanite-atlas.aseprite  paddle.aseprite  resources.json  sample.c  texture_sample_assets.json
include/: game_settings.h  gameplay.h  high_score.h  logo_screen.h  main.h  play_state.h  play_state_manager.h  scene.h  scene_manager.h  title_screen.h
include/collisions/: ball_brick_collision.h  ball_kill_boundary_collision.h  collision_category.h  collision_manager.h  nanite_kill_boundary_collision.h  nanite_paddle_collision.h  nanite_ship_collision.h
include/core/: animation_handler.h  b_utils.h  ext_collision.h  game.h  game_settings.h  high_score.h  resource.h  resource_manager.h  scene_manager.h  settings.h
include/entities/: ball.h  brick.h  entities.h  entity_type.h  kill_boundary.h  nanite.h  paddle.h  wall_edges.h
include/entities/ship/: ship.h  ship_body.h  ship_shield.h  ship_thruster.h  ship_thrusters.h
include/game/: ball.h  brick.h  collision.h  entities.h  game_context.h  game_data.h  game_data_manager.h  game_data_summary.h  game_dialog.h  game_slide.h  game_status.h  game_ui.h  high_score.h  level_manager.h  paddle.h  player.h  player_stat.h  playing_ui_bars.h  shake_effect.h  slide_manager.h  text_manager.h  upgrade_manager.h  upgrade_node.h  wall_edges.h
include/game_states/: game_intro_start_state.h  game_over_state.h  game_state.h  game_state_manager.h  high_score_state.h  pause_menu_state.h  play_state_manager.h  playing_menu_state.h  playing_state.h  settings_menu_state.h  upgrade_menu_state.h
include/input/: gamepad.h  gamepad_test.h  input_manager.h  input_mapping.h  playing_input_handler.h  virtual_keyboard.h
include/mappings/: bar_level_mapper.h  brick_type_mapper.h  nanite_type_mapper.h  node_attribute_mapper.h  node_perk_mapper.h  shield_type_mapper.h  ship_color_mapper.h  thruster_level_mapper.h  upgrade_icon_mapper.h
include/scenes/: embark_scene.h  gameplay.h  gameplay_scene.h  logo_scene.h  main_menu.h  main_menu_scene.h  scene.h  scene_manager.h  title_scene.h
src/: game_settings.c  gameplay.c  high_score.c  logo_screen.c  main.c  main_menu.c  play_state_manager.c  playing_menu_state.c  playing_state.c  scene_manager.c  title_screen.c
src/collisions/: ball_brick_collision.c  ball_kill_boundary_collision.c  collision_manager.c  nanite_kill_boundary_collision.c  nanite_paddle_collision.c  nanite_ship_collision.c
src/core/: animation_handler.c  b_utils.c  ext_collision.c  game.c  game_settings.c  high_score.c  main.c  resource_manager.c  scene_manager.c  settings.c
src/entities/: ball.c  brick.c  entities.c  kill_boundary.c  nanite.c  paddle.c  wall_edges.c
src/entities/ship/: ship.c  ship_body.c  ship_shield.c  ship_thruster.c  ship_thrusters.c
src/game/: ball.c  brick.c  collision.c  entities.c  game_context.c  game_data.c  game_data_summary.c  game_dialog.c  game_slide.c  game_status.c  game_ui.c  high_score.c  level_manager.c  paddle.c  player.c  player_stat.c  playing_ui_bars.c  shake_effect.c  slide_manager.c  text_manager.c  upgrade_manager.c  wall_edges.c
src/game_states/: game_intro_start_state.c  game_over_state.c  game_state_manager.c  high_score_state.c  pause_menu_state.c  playing_menu_state.c  playing_state.c  settings_menu_state.c  upgrade_menu_state.c
src/input/: gamepad_test.c  input_manager.c  playing_input_handler.c  virtual_keyboard.c
src/mappings/: bar_level_mapper.c  brick_type_mapper.c  nanite_type_mapper.c  node_attribute_mapper.c  node_perk_mapper.c  shield_type_mapper.c  ship_color_mapper.c  thruster_level_mapper.c  upgrade_icon_mapper.c
src/scenes/: embark_scene.c  gameplay.c  gameplay_scene.c  logo_scene.c  main_menu.c  main_menu_scene.c  scene_manager.c  title_scene.c
